--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>4.0.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
+	<groupId>com.finance</groupId>
+	<artifactId>finance-manager</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Personal Finance Manager</description>
 	<url/>
 	<licenses>
 		<license/>
