fix(database): remove hardcoded credentials from properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/finance_manager
 spring.datasource.username=finance_user 
 spring.datasource.database=finance_manager
-spring.datasource.password=***REMOVED***
+spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
@@ -24,4 +24,4 @@ logging.level.org.springframework.security=DEBUG
 
 # Security for development
 spring.security.user.name=admin
-spring.security.user.password=***REMOVED***
+spring.security.user.password=
